feat: user activation
